fix: dropdown overlaying other elements & taking up 100% height on mobile

--- a/src/Dropdown/Dropdown_fullView.scss
+++ b/src/Dropdown/Dropdown_fullView.scss
@@ -65,6 +65,7 @@ svg[id^='svg-id-'] {
   display: block;
   position: absolute;
   background-color: #ffffff;
+  z-index: 5;
 }
 
 .li-wrapper .li-button {
