--- a/src/Dropdown/Dropdown_mobile.scss
+++ b/src/Dropdown/Dropdown_mobile.scss
@@ -21,7 +21,7 @@
     right: 0;
     bottom: 0;
     background-color: #FFFFFF;
-    position: absolute;
+    position: fixed !important;
     margin-top: 0;
     padding: 0;
     height: 100%;
